--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"> -->
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
   <!-- stylesheet -->
   <link rel="stylesheet" href="scss/style.css">
@@ -137,8 +139,10 @@
   </div>
   <!-- bg img end -->
 
+  <div class="container-fluid" style="background: #F8FAFC; padding-top: 150px !important; z-index: -1;"></div>
+
   <!-- card start -->
-  <section class="container-fluid p-4" style="background:  #F8FAFC;">
+  <section class="container-fluid p-4" style="background: #F8FAFC;">
     <div class=" container text-center">
       <h1><strong>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</strong></h1>
       <div class="row mt-5 d-flex justify-content-around">
@@ -290,169 +294,115 @@
     </div>
 
     <div class="row-1"></div>
+    
     <div class="slide_container swiper">
       <div class="slide_content">
         <div class="card-wrapper swiper-wrapper">
 
-          <div class="card swiper_slide shadow" style="width: 350px;">
-            <div class="image_content">
-              <span class="overlay"></span>
-              <div class="card_content">
-                <img src="image/profile1.jpg" alt="" class="card-img">
+          <div class="card swiper_slide shadow me-2" style="width: 350px;">
+            <div class="image_content px-4">
+              <div class="d-flex">
+                <img src="images/profile logo/curly hair.png" class="me-2" alt="">
+                <div class="d-flex flex-column">
+                  <h6 class="p-0">John Doe</h6>
+                  <p class="p-0">CEO</p>
+                </div>
+
+                  <div style="margin-left: auto;">
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star"></span>
+                </div>
               </div>
             </div>
-            <div class="card_content" style="align-items: center; width: 100%; height: 100%;">
-              <h2 class="name">David Dell</h2>
-              <p class="description">The lorem text the section that contains header with having open functionality.
-                Lorem dolor sit amet consectetur adipisicing elit.</p>
+            <div class="card_content p-3 text-start" style="align-items: center; width: 100%; height: 100%;">
+              <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum ipsam distinctio
+                eveniet voluptatem harum vitae laboriosam quos laudantium reiciendis. Laboriosam sapiente, ut error
+                alias impedit aliquid vitae incidunt asperiores? Laudantium ullam beatae placeat sequi dolores! Facere
+                vel quam in dolorem?</p>
+            </div>
+          </div>
 
-              <button class="button">View More</button>
+          <div class="card swiper_slide shadow me-2" style="width: 350px;">
+            <div class="image_content px-4">
+              <div class="d-flex">
+                <img src="images/profile logo/girl.png" class="me-2" alt="">
+                <div class="d-flex flex-column">
+                  <h6 class="p-0">Amanda green</h6>
+                  <p class="p-0">Manager</p>
+                </div>
+
+                  <div style="margin-left: auto;">
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+              </div>
+            </div>
+            <div class="card_content p-3 text-start" style="align-items: center; width: 100%; height: 100%;">
+              <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum ipsam distinctio
+                eveniet voluptatem harum vitae laboriosam quos laudantium reiciendis. Laboriosam sapiente, ut error
+                alias impedit aliquid vitae incidunt asperiores? Laudantium ullam beatae placeat sequi dolores! Facere
+                vel quam in dolorem?</p>
             </div>
           </div>
 
           <div class="card swiper_slide shadow" style="width: 350px;">
-            <div class="image_content">
-              <span class="overlay"></span>
+            <div class="image_content px-4">
+              <div class="d-flex">
+                <img src="images/profile logo/men.png" class="me-2" alt="">
+                <div class="d-flex flex-column">
+                  <h6 class="p-0">Sam</h6>
+                  <p class="p-0">Customer</p>
+                </div>
 
-              <div class="card_content">
-                <img src="image/profile2.jpg" alt="" class="card-img">
+                  <div style="margin-left: auto;">
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star"></span>
+                </div>
               </div>
             </div>
-
-            <div class="card_content" style="align-items: center; width: 100%; height: 100%;">
-              <h2 class="name">David Dell</h2>
-              <p class="description">The lorem text the section that contains header with having open functionality.
-                Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-              <button class="button">View More</button>
+            <div class="card_content p-3 text-start" style="align-items: center; width: 100%; height: 100%;">
+              <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum ipsam distinctio
+                eveniet voluptatem harum vitae laboriosam quos laudantium reiciendis. Laboriosam sapiente, ut error
+                alias impedit aliquid vitae incidunt asperiores? Laudantium ullam beatae placeat sequi dolores! Facere
+                vel quam in dolorem?</p>
             </div>
           </div>
 
           <div class="card swiper_slide shadow" style="width: 350px;">
-            <div class="image_content">
-              <span class="overlay"></span>
+            <div class="image_content px-4">
+              <div class="d-flex">
+                <img src="images/profile logo/curly hair.png" class="me-2" alt="">
+                <div class="d-flex flex-column">
+                  <h6 class="p-0">John Doe</h6>
+                  <p class="p-0">CEO</p>
+                </div>
 
-              <div class="card_content">
-                <img src="image/profile3.jpg" alt="" class="card-img">
+                  <div style="margin-left: auto;">
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star text-warning"></span>
+                    <span class="fa fa-star"></span>
+                </div>
               </div>
             </div>
-
-            <div class="card_content" style="align-items: center; width: 100%; height: 100%;">
-              <h2 class="name">David Dell</h2>
-              <p class="description">The lorem text the section that contains header with having open functionality.
-                Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-              <button class="button">View More</button>
+            <div class="card_content p-3 text-start" style="align-items: center; width: 100%; height: 100%;">
+              <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum ipsam distinctio
+                eveniet voluptatem harum vitae laboriosam quos laudantium reiciendis. Laboriosam sapiente, ut error
+                alias impedit aliquid vitae incidunt asperiores? Laudantium ullam beatae placeat sequi dolores! Facere
+                vel quam in dolorem?</p>
             </div>
           </div>
-
-          <div class="card swiper_slide shadow" style="width: 350px;">
-            <div class="image_content">
-              <span class="overlay"></span>
-
-              <div class="card_content">
-                <img src="image/profile4.jpg" alt="" class="card-img">
-              </div>
-            </div>
-
-            <div class="card_content" style="align-items: center; width: 100%; height: 100%;">
-              <h2 class="name">David Dell</h2>
-              <p class="description">The lorem text the section that contains header with having open functionality.
-                Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-              <button class="button">View More</button>
-            </div>
-          </div>
-
-          <div class="card swiper_slide shadow" style="width: 350px;">
-            <div class="image_content">
-              <span class="overlay"></span>
-
-              <div class="card_content">
-                <img src="image/profile5.jpg" alt="" class="card-img">
-              </div>
-            </div>
-
-            <div class="card_content" style="align-items: center; width: 100%; height: 100%;">
-              <h2 class="name">David Dell</h2>
-              <p class="description">The lorem text the section that contains header with having open functionality.
-                Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-              <button class="button">View More</button>
-            </div>
-          </div>
-
-          <div class="card swiper_slide shadow" style="width: 350px;">
-            <div class="image_content">
-              <span class="overlay"></span>
-
-              <div class="card_content">
-                <img src="image/profile6.jpg" alt="" class="card-img">
-              </div>
-            </div>
-
-            <div class="card_content" style="align-items: center; width: 100%; height: 100%;">
-              <h2 class="name">David Dell</h2>
-              <p class="description">The lorem text the section that contains header with having open functionality.
-                Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-              <button class="button">View More</button>
-            </div>
-          </div>
-
-          <div class="card swiper_slide shadow" style="width: 350px;">
-            <div class="image_content">
-              <span class="overlay"></span>
-
-              <div class="card_content">
-                <img src="image/profile7.jpg" alt="" class="card-img">
-              </div>
-            </div>
-
-            <div class="card_content" style="align-items: center; width: 100%; height: 100%;">
-              <h2 class="name">David Dell</h2>
-              <p class="description">The lorem text the section that contains header with having open functionality.
-                Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-              <button class="button">View More</button>
-            </div>
-          </div>
-
-          <div class="card swiper_slide shadow">
-            <div class="image_content">
-              <span class="overlay"></span>
-
-              <div class="card_content">
-                <img src="image/profile8.jpg" alt="" class="card-img">
-              </div>
-            </div>
-
-            <div class="card_content" style="align-items: center; width: 100%; height: 100%;">
-              <h2 class="name">David Dell</h2>
-              <p class="description">The lorem text the section that contains header with having open functionality.
-                Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-              <button class="button">View More</button>
-            </div>
-          </div>
-
-          <div class="card swiper_slide shadow">
-            <div class="image_content">
-              <span class="overlay"></span>
-
-              <div class="card_content">
-                <img src="image/profile9.jpg" alt="" class="card-img">
-              </div>
-            </div>
-
-            <div class="card_content" style="align-items: center; width: 100%; height: 100%;">
-              <h2 class="name">David Dell</h2>
-              <p class="description">The lorem text the section that contains header with having open functionality.
-                Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-              <button class="button">View More</button>
-            </div>
-          </div>
+         
         </div>
       </div>
 
@@ -469,7 +419,7 @@
   <div class="container-fluid">
     <div class="container p-5">
       <div style="height: 250px;"></div>
-        <h2 class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
+      <h2 class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
     </div>
   </div>
   <!-- heading end -->
@@ -480,16 +430,16 @@
       <div class="row d-flex justify-content-around g-4">
 
         <div class="col-lg-3 bg-light rounded d-flex flex-column">
-              <img src="./images/fire fog.png" class="mx-auto" alt="fire fog">
-              <h5 class="text-center">Forms On Fire</h5>
+          <img src="./images/fire fog.png" class="mx-auto" alt="fire fog">
+          <h5 class="text-center">Forms On Fire</h5>
         </div>
         <div class="col-lg-3 rounded d-flex flex-column">
-              <img src="./images/lect.png" class="mx-auto" alt="fire fog">
-              <h5 class="text-center">ElectroNeek Studio IDE</h5>
+          <img src="./images/lect.png" class="mx-auto" alt="fire fog">
+          <h5 class="text-center">ElectroNeek Studio IDE</h5>
         </div>
         <div class="col-lg-3 rounded d-flex flex-column">
-              <img src="./images/right.png" class="mx-auto my-auto" style="width: 75px;" alt="fire fog">
-              <h5 class="text-center">Jot Form</h5>
+          <img src="./images/right.png" class="mx-auto my-auto" style="width: 75px;" alt="fire fog">
+          <h5 class="text-center">Jot Form</h5>
         </div>
       </div>
     </div>
@@ -497,32 +447,28 @@
   <!-- company logo end -->
 
   <footer class="container-fluid bg-dark p-5" style="margin-top: 200px;">
-      <h5 class="text-light text-center">© Helplama2021</h5>
+    <h5 class="text-light text-center">© Helplama2021</h5>
   </footer>
 
   <!-- Bootstrap js -->
-  <!-- <script src="js/bootstrap.bundle.js"></script>
+  <script src="js/bootstrap.bundle.js"></script>
   <script src="js/bootstrap.bundle.js.map"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/bootstrap.bundle.min.js.map"></script>
   <script src="js/bootstrap.js.map"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/bootstrap.min.js.map"></script> -->
-  <!-- <script src="js/bootstrap.js"></script> -->
-
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-  <!-- Bootstrap JQuery Plugin -->
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script> -->
+  <script src="js/bootstrap.min.js.map"></script> 
+  <script src="js/bootstrap.js"></script>
 
   <!-- Js of own -->
   <script src="js/script.js"></script>
 
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
     integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-    crossorigin="anonymous"></script> -->
+    crossorigin="anonymous"></script>
 
   <script src="/swiper-bundle.min.js"></script>
 </body>
